--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
     <footer class="footer">
         <div class="footer-content">
             <p><b>(주)공마고의 도둑들</b> | 대표이사: 윤수원</p>
-            <p>충청남도 공주시 유구읍 중앙1길 27-12 1학년 1반 | </p> <p class="allow-select">contact@gjmst-thives.com</p>
+            <p class="allow-select">충청남도 공주시 유구읍 중앙1길 27-12 1학년 1반 | contact@gjmst-thives.com</p>
             <p style="margin-top: 20px;">Copyright © 2025 The Gjmst Thieves. All rights reserved.</p>
         </div>
     </footer>
