--- a/index.html
+++ b/index.html
@@ -230,11 +230,11 @@
 
         .product-img-box { width: 100%; height: 320px; background: var(--bg-light); border-radius: 20px; margin: 30px 0; display: flex; align-items: center; justify-content: center; color: #ccc; font-weight: bold; }
 
-        /* [진동 효과: 1px] */
+        /* [진동 효과: 1px로 미세하게 설정] */
         @keyframes shake {
             0%, 100% { transform: translateX(0); }
-            20%, 60% { transform: translateX(-1px); }
-            40%, 80% { transform: translateX(1px); }
+            10%, 30%, 50%, 70%, 90% { transform: translateX(-1px); }
+            20%, 40%, 60%, 80% { transform: translateX(1px); }
         }
         .shake-animation {
             animation: shake 0.3s ease-in-out;
@@ -264,25 +264,27 @@
             cursor: pointer; 
         }
         
-        /* [수정됨] 다크모드 로고 로직 수정 */
-        /* GJMST 제외: 평소엔 회색빛(하얀톤), 호버하면 쨍한 흰색 */
+        /* [수정됨] 다크모드 로고 로직 */
+        /* GJMST 제외: 기본은 80% 밝기(약간 어둡), 호버하면 100% 흰색 */
         body.dark-mode .partner-logo:not(.gjmst-logo) {
-            filter: brightness(0) invert(0.6); 
+            filter: brightness(0) invert(0.8); 
             opacity: 0.8;
         }
         body.dark-mode .partner-logo:not(.gjmst-logo):hover {
-            filter: brightness(0) invert(1); /* 완전 흰색 */
+            filter: brightness(0) invert(1); 
             opacity: 1; 
             transform: scale(1.1);
         }
 
-        /* GJMST 로고: 다크모드에서 원본 유지 (하얗게 변하지 않음) */
+        /* [수정됨] GJMST 로고: 다크모드에서 살짝 어둡게 -> 호버시 원본 밝기 */
         body.dark-mode .gjmst-logo {
-            filter: none; 
-            opacity: 1; 
+            filter: brightness(0.8); 
+            opacity: 0.9;
         }
         body.dark-mode .gjmst-logo:hover {
-            transform: scale(1.1); /* 커지기만 함 */
+            filter: brightness(1); /* 호버 시 원본 밝기로 */
+            opacity: 1;
+            transform: scale(1.1); 
         }
         
         /* 라이트 모드 호버 */
