--- a/index.html
+++ b/index.html
@@ -447,8 +447,8 @@
 
     <main id="contact" class="page">
         <header class="section-header">
-            <h2>We're Here to Help</h2>
-            <p>궁금한 점이 있으신가요? 언제든 편하게 문의해주세요.</p>
+            <h2>Start The Conversation</h2>
+            <p></p>
         </header>
         
         <div class="contact-container">
@@ -468,8 +468,8 @@
                 <div class="contact-card">
                     <span class="contact-icon">🏢</span>
                     <h3 style="font-size:20px; margin: 10px 0;">Visit Us</h3>
-                    <p style="color:var(--text-sub); font-size:15px; margin-bottom:10px;">충남 공주시 유구읍</p>
-                    <p class="allow-select" style="font-weight:700;">중앙1길 27-12 1학년 1반</p>
+                    <p style="color:var(--text-sub); font-size:15px; margin-bottom:10px;">주소</p>
+                    <p class="allow-select" style="font-weight:700;">충청남도 공주시 유구읍 중앙1길 27-12 1학년 1반</p>
                 </div>
             </div>
 
