--- a/index.html
+++ b/index.html
@@ -481,8 +481,8 @@
                 <div class="contact-card">
                     <img src="images/office.svg" alt="Office" class="contact-icon">
                     <h3 style="font-size:20px; margin: 10px 0;">Visit Us</h3>
-                    <p style="color:var(--text-sub); font-size:15px; margin-bottom:10px;">충남 공주시 유구읍</p>
-                    <p class="allow-select" style="font-weight:700;">중앙1길 27-12 1학년 1반</p>
+                    <p style="color:var(--text-sub); font-size:15px; margin-bottom:10px;">주소</p>
+                    <p class="allow-select" style="font-weight:700;">충청남도 공주시 유구읍 중앙1길 27-12 1학년 1반</p>
                 </div>
             </div>
 
