--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@
         }
 
         const textElement = document.getElementById('typewriter');
-        const sentences = ["기숙사 냉장고의 평화,", "오피스 냉장고의 신뢰,", "기술로 완성합니다."];
+        const sentences = ["기숙사 냉장고의 평화,", "사무실 냉장고의 신뢰,", "기술로 완성합니다."];
         let sentenceIdx = 0; let charIdx = 0; let isDeleting = false;
         function type() {
             const currentSentence = sentences[sentenceIdx];
