--- a/index.html
+++ b/index.html
@@ -460,8 +460,8 @@
 
     <main id="contact" class="page">
         <header class="section-header">
-            <h2>We're Here to Help</h2>
-            <p>궁금한 점이 있으신가요? 언제든 편하게 문의해주세요.</p>
+            <h2>Start The Conversation</h2>
+            <p>작은 대화가 큰 변화를 만듭니다.</p>
         </header>
         
         <div class="contact-container">
