--- a/index.html
+++ b/index.html
@@ -325,8 +325,8 @@
         <section class="review-section">
             <div class="review-title-group">
                 <p style="color: var(--primary-color); font-weight: 700; font-size: 14px; letter-spacing: 1px; margin-bottom: 10px;">REAL STORIES</p>
-                <h2 style="font-size: 42px; font-weight: 700; margin: 0; color: var(--text-main);">이미 평화는 시작되었습니다.</h2>
-                <p class="review-subtitle">누적 판매량 15,000개 돌파, 사용자 만족도 4.9/5.0</p>
+                <h2 style="font-size: 42px; font-weight: 700; margin: 0; color: var(--text-main);">Proven In Action</h2>
+                <p class="review-subtitle"><b>공마고의 도둑들</b>의 제품은 결과로 증명합니다.</p>
             </div>
             
             <div class="review-grid">
