--- a/index.html
+++ b/index.html
@@ -333,39 +333,39 @@
                 <div class="review-card">
                     <div style="color: #FFD700; font-size: 20px; margin-bottom: 15px;">★★★★★</div>
                     <p style="font-size: 18px; line-height: 1.6; color: var(--text-main); margin-bottom: 20px; font-weight: 600;">
-                        "맨날 사라지던 몬스터... 설치하고 하루 만에 범인 잡았습니다. 305호 사는 친구야, 맛있었니?"
+                        "저같은 50대도 쉽게 설치가능했어요. 설치한뒤로 학생들의 민원이 크게 줄었습니다."
                     </p>
                     <div style="display: flex; align-items: center; gap: 12px;">
                         <div class="reviewer-avatar">김</div>
                         <div>
-                            <div style="font-size: 14px; font-weight: 700; color: var(--text-main);">김민준</div>
-                            <div style="font-size: 12px; color: var(--text-sub);">공마고 1학년 • 기숙사생</div>
+                            <div style="font-size: 14px; font-weight: 700; color: var(--text-main);">김*화</div>
+                            <div style="font-size: 12px; color: var(--text-sub);">XX고 기숙사 사감</div>
                         </div>
                     </div>
                 </div>
                 <div class="review-card">
                     <div style="color: #FFD700; font-size: 20px; margin-bottom: 15px;">★★★★★</div>
                     <p style="font-size: 18px; line-height: 1.6; color: var(--text-main); margin-bottom: 20px; font-weight: 600;">
-                        "설치하는데 1분도 안 걸렸어요. 앱 알림이 생각보다 엄청 빨라서 놀랐습니다. 강추합니다."
+                        "설치하는데 1분도 안 걸렸어요☺️ 촬영되자마자 클라우드에서 확인할 수 있어서 놀랐어요. 강추합니다!!"
                     </p>
                     <div style="display: flex; align-items: center; gap: 12px;">
-                        <div class="reviewer-avatar">P</div>
+                        <div class="reviewer-avatar">김</div>
                         <div>
-                            <div style="font-size: 14px; font-weight: 700; color: var(--text-main);">Park S.H.</div>
-                            <div style="font-size: 12px; color: var(--text-sub);">IT 스타트업 재직</div>
+                            <div style="font-size: 14px; font-weight: 700; color: var(--text-main);">김지우</div>
+                            <div style="font-size: 12px; color: var(--text-sub);">회사원</div>
                         </div>
                     </div>
                 </div>
                 <div class="review-card">
-                    <div style="color: #FFD700; font-size: 20px; margin-bottom: 15px;">★★★★★</div>
+                    <div style="color: #FFD700; font-size: 20px; margin-bottom: 15px;">★★★★☆</div>
                     <p style="font-size: 18px; line-height: 1.6; color: var(--text-main); margin-bottom: 20px; font-weight: 600;">
                         "범인을 잡는 것도 좋지만, 카메라가 있다는 것만으로도 도난이 싹 사라졌어요. 이게 기술의 힘인가요."
                     </p>
                     <div style="display: flex; align-items: center; gap: 12px;">
-                        <div class="reviewer-avatar">최</div>
+                        <div class="reviewer-avatar">염</div>
                         <div>
-                            <div style="font-size: 14px; font-weight: 700; color: var(--text-main);">최지훈</div>
-                            <div style="font-size: 12px; color: var(--text-sub);">공마고 2학년</div>
+                            <div style="font-size: 14px; font-weight: 700; color: var(--text-main);">염*석</div>
+                            <div style="font-size: 12px; color: var(--text-sub);">XX고 2학년</div>
                         </div>
                     </div>
                 </div>
