--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                     <div style="display: flex; align-items: center; gap: 12px;">
                         <div class="reviewer-avatar">김</div>
                         <div>
-                            <div style="font-size: 14px; font-weight: 700; color: var(--text-main);">김지우</div>
+                            <div style="font-size: 14px; font-weight: 700; color: var(--text-main);">김*우</div>
                             <div style="font-size: 12px; color: var(--text-sub);">회사원</div>
                         </div>
                     </div>
