--- a/index.html
+++ b/index.html
@@ -346,13 +346,13 @@
                 <div class="review-card">
                     <div style="color: #FFD700; font-size: 20px; margin-bottom: 15px;">★★★★★</div>
                     <p style="font-size: 18px; line-height: 1.6; color: var(--text-main); margin-bottom: 20px; font-weight: 600;">
-                        "설치하는데 1분도 안 걸렸어요☺️ 촬영되자마자 클라우드에서 확인할 수 있어서 놀랐어요. 강추합니다!!"
+                        "설치하는데 1분도 안 걸렸어요☺️ 도둑잡는 용도 말고도 다이어트 할때도 도움됐어요. 강추합니다!!"
                     </p>
                     <div style="display: flex; align-items: center; gap: 12px;">
                         <div class="reviewer-avatar">김</div>
                         <div>
                             <div style="font-size: 14px; font-weight: 700; color: var(--text-main);">김*우</div>
-                            <div style="font-size: 12px; color: var(--text-sub);">회사원</div>
+                            <div style="font-size: 12px; color: var(--text-sub);">가수</div>
                         </div>
                     </div>
                 </div>
