--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                         <div class="reviewer-avatar">염</div>
                         <div>
                             <div style="font-size: 14px; font-weight: 700; color: var(--text-main);">염*석</div>
-                            <div style="font-size: 12px; color: var(--text-sub);">XX고 2학년</div>
+                            <div style="font-size: 12px; color: var(--text-sub);">△△고 3학년</div>
                         </div>
                     </div>
                 </div>
