--- a/index.html
+++ b/index.html
@@ -503,8 +503,8 @@
                 <div class="contact-card">
                     <img src="images/office.svg" alt="Office" class="contact-icon">
                     <h3 style="font-size:20px; margin: 10px 0;">Visit Us</h3>
-                    <p style="color:var(--text-sub); font-size:15px; margin-bottom:10px;">충남 공주시 유구읍</p>
-                    <p class="allow-select" style="font-weight:700;">중앙1길 27-12 1학년 1반</p>
+                    <p style="color:var(--text-sub); font-size:15px; margin-bottom:10px;">주소</p>
+                    <p class="allow-select" style="font-weight:700;">충청남도 공주시 유구읍 중앙1길 27-12 1학년 1반</p>
                 </div>
             </div>
 
@@ -519,19 +519,19 @@
                 <div class="faq-item">
                     <details>
                         <summary class="faq-summary">설치는 어렵지 않나요?</summary>
-                        <div class="faq-content">누구나 1분 안에 설치할 수 있도록 설계되었습니다. 동봉된 부착 가이드를 참고해주세요.</div>
+                        <div class="faq-content">남녀노소 누구나 1분 안에 설치할 수 있도록 설계되었습니다. 동봉된 부착 가이드를 참고해주세요.</div>
                     </details>
                 </div>
                 <div class="faq-item">
                     <details>
                         <summary class="faq-summary">AS 기간은 어떻게 되나요?</summary>
-                        <div class="faq-content">제품 구매일로부터 1년간 무상 AS를 보증합니다. (단, 고객 과실 제외)</div>
+                        <div class="faq-content">제품 구매일로부터 2년간 무상 AS를 보증합니다. (단, 고객 과실 제외)</div>
                     </details>
                 </div>
             </div>
 
             <div class="inquiry-box">
-                <h3 style="font-size:24px; font-weight:700; margin:0 0 20px;">Send Message</h3>
+                <h3 style="font-size:24px; font-weight:700; margin:0 0 20px;">Send us a message.</h3>
                 <form class="inquiry-form" onsubmit="event.preventDefault(); alert('문의가 접수되었습니다.');">
                     <input type="text" placeholder="이름" required>
                     <input type="email" placeholder="이메일" required>
