--- a/index.html
+++ b/index.html
@@ -147,13 +147,11 @@
         .stat-number { font-size: 64px; font-weight: 800; color: var(--primary-color); display: block; line-height: 1; margin-bottom: 10px; }
 
         /* --- [REVIEW SECTION (Moved to Home)] --- */
-        /* [수정] 배경색을 var(--bg-light)로 통일하여 설문/앱 섹션과 이어지게 함 */
         .review-section { padding: 100px 24px; background-color: var(--bg-light); text-align: center; }
         .review-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 30px; max-width: 1100px; margin: 0 auto; }
         .review-card { background: var(--card-bg); padding: 40px; border-radius: 30px; text-align: left; border: 1px solid var(--card-border); box-shadow: 0 10px 30px rgba(0,0,0,0.05); }
         .review-card:hover { transform: translateY(-5px); box-shadow: 0 20px 40px rgba(0,0,0,0.1); }
         .reviewer-avatar { width: 40px; height: 40px; background: var(--bg-light); border-radius: 50%; display: flex; align-items: center; justify-content: center; font-weight: bold; color: var(--text-sub); border: 1px solid var(--card-border); }
-        
         .review-title-group { margin-bottom: 60px; }
         .review-subtitle { color: var(--text-sub); font-size: 18px; margin-top: 15px; font-weight: 500; }
 
@@ -164,9 +162,33 @@
         .app-image { flex: 1; display: flex; justify-content: center; }
         .phone-mockup { width: 280px; height: 560px; background: #000; border-radius: 40px; border: 12px solid #1d1d1f; position: relative; box-shadow: 0 20px 50px rgba(0,0,0,0.2); overflow: hidden; background: #fff; }
         .notch { position: absolute; top: 0; left: 50%; transform: translateX(-50%); width: 120px; height: 25px; background: #1d1d1f; border-bottom-left-radius: 16px; border-bottom-right-radius: 16px; z-index: 10; }
-        #notification-list { width: 100%; padding: 20px; box-sizing: border-box; display: flex; flex-direction: column; gap: 10px; }
-        .notification-item { background: #f5f5f7; padding: 15px; border-radius: 12px; display: flex; align-items: center; animation: slideUpList 0.5s ease-out forwards; }
-        @keyframes slideUpList { from { opacity: 0; transform: translateY(20px); } to { opacity: 1; transform: translateY(0); } }
+
+        /* [수정됨] 알림 리스트: 가운데 정렬 + 정적 */
+        #notification-list{
+            width: 100%;
+            padding: 20px;
+            box-sizing: border-box;
+
+            height: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;   /* 세로 가운데 */
+            align-items: center;       /* 가로 가운데 */
+            gap: 12px;
+        }
+        .notification-item{
+            background: #f5f5f7;
+            padding: 15px;
+            border-radius: 12px;
+            display: flex;
+            align-items: center;
+
+            width: min(220px, 100%);
+            justify-content: flex-start;
+
+            animation: none; /* 정적 */
+        }
+
         .live-view-btn { background: var(--primary-color); color: white; padding: 10px 20px; border-radius: 20px; display: inline-block; font-size: 14px; font-weight: 600; cursor: pointer; text-decoration: none; box-shadow: 0 4px 6px rgba(0,0,0,0.1); }
         .live-view-btn:hover { filter: brightness(1.1); transform: scale(1.05) translateY(-2px); box-shadow: 0 8px 15px rgba(0,0,0,0.2); }
 
@@ -225,7 +247,6 @@
         details[open] .faq-summary::after { content: '-'; transform: rotate(180deg); }
         .faq-content { 
             padding-bottom: 20px; color: var(--text-sub); font-size: 15px; line-height: 1.6; 
-            /* [FAQ Animation] */
             animation: slideDownFade 0.3s ease-out forwards;
         }
         @keyframes slideDownFade { from { opacity: 0; transform: translateY(-10px); } to { opacity: 1; transform: translateY(0); } }
@@ -647,16 +668,36 @@
             setTimeout(type, typeSpeed);
         }
 
+        /* [수정됨] 알림: 정적 3개 고정 렌더 */
         function updateNotifications() {
             const list = document.getElementById('notification-list');
             if(!list) return;
-            const now = new Date();
-            const timeStr = `오늘 ${now.getHours() > 12 ? '오후' : '오전'} ${now.getHours() % 12 || 12}:${String(now.getMinutes()).padStart(2, '0')}`;
-            if (list.children.length >= 3) list.removeChild(list.firstElementChild);
-            const item = document.createElement('div');
-            item.className = 'notification-item';
-            item.innerHTML = `<div style="width:40px; height:40px; background:#ddd; border-radius:8px; margin-right:10px; display:flex; align-items:center; justify-content:center;">📸</div><div style="text-align:left;"><div style="font-size:14px; font-weight:bold; color:#333;">동작 감지됨</div><div style="font-size:12px; color:#888;">${timeStr}</div></div>`;
-            list.appendChild(item);
+
+            list.innerHTML = `
+                <div class="notification-item">
+                    <div style="width:40px; height:40px; background:#ddd; border-radius:8px; margin-right:10px; display:flex; align-items:center; justify-content:center;">📸</div>
+                    <div style="text-align:left;">
+                        <div style="font-size:14px; font-weight:bold; color:#333;">동작 감지됨</div>
+                        <div style="font-size:12px; color:#888;">오늘 오전 10:12</div>
+                    </div>
+                </div>
+
+                <div class="notification-item">
+                    <div style="width:40px; height:40px; background:#ddd; border-radius:8px; margin-right:10px; display:flex; align-items:center; justify-content:center;">🔔</div>
+                    <div style="text-align:left;">
+                        <div style="font-size:14px; font-weight:bold; color:#333;">새 기록 저장됨</div>
+                        <div style="font-size:12px; color:#888;">오늘 오전 09:58</div>
+                    </div>
+                </div>
+
+                <div class="notification-item">
+                    <div style="width:40px; height:40px; background:#ddd; border-radius:8px; margin-right:10px; display:flex; align-items:center; justify-content:center;">✅</div>
+                    <div style="text-align:left;">
+                        <div style="font-size:14px; font-weight:bold; color:#333;">장치 연결됨</div>
+                        <div style="font-size:12px; color:#888;">오늘 오전 09:40</div>
+                    </div>
+                </div>
+            `;
         }
 
         const themeBtn = document.getElementById('themeToggle');
@@ -716,11 +757,10 @@
 
         window.addEventListener('keydown', (e) => { if (e.key === 'Escape') closeProductModal(); });
 
+        /* [수정됨] 알림 반복 갱신 제거: 1회만 렌더 */
         window.onload = function() {
             type();
             updateNotifications();
-            setTimeout(updateNotifications, 1000);
-            setInterval(updateNotifications, 20000);
         };
     </script>
 </body>
