--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             line-height: 1.6;
             word-break: keep-all;
             overflow-x: hidden;
-            -webkit-user-select: none; user-select: none;
+            -webkit-user-select: none; -moz-user-select: none; -ms-use-select: none; user-select: none;
         }
 
         /* --- 네비게이션 --- */
@@ -134,7 +134,7 @@
         .review-title-group { margin-bottom: 60px; }
         .review-subtitle { color: var(--text-sub); font-size: 18px; margin-top: 15px; font-weight: 500; }
 
-        /* --- [APP PREVIEW] --- */
+        /* --- [APP PREVIEW & NOTIFICATIONS] --- */
         .app-section { padding: 100px 24px; background: var(--bg-light); overflow: hidden; }
         .app-container { max-width: 1000px; margin: 0 auto; display: flex; align-items: center; justify-content: space-between; gap: 50px; }
         .app-text { flex: 1; text-align: left; }
@@ -142,7 +142,19 @@
         .phone-mockup { width: 280px; height: 560px; background: #000; border-radius: 40px; border: 12px solid #1d1d1f; position: relative; box-shadow: 0 20px 50px rgba(0,0,0,0.2); overflow: hidden; background: #fff; }
         .notch { position: absolute; top: 0; left: 50%; transform: translateX(-50%); width: 120px; height: 25px; background: #1d1d1f; border-bottom-left-radius: 16px; border-bottom-right-radius: 16px; z-index: 10; }
         .phone-screen { width: 100%; height: 100%; display: flex; flex-direction: column; justify-content: flex-start; }
-        #notification-list { width: 100%; padding: 0 20px; box-sizing: border-box; display: flex; flex-direction: column; gap: 12px; flex-grow: 1; }
+        
+        /* [수정됨] 알림 리스트 가운데 정렬 */
+        #notification-list { 
+            width: 100%; 
+            padding: 0 20px; 
+            box-sizing: border-box; 
+            display: flex; 
+            flex-direction: column; 
+            gap: 12px; 
+            flex-grow: 1; 
+            justify-content: center; /* 수직 가운데 정렬 */
+        }
+        
         .notification-item { background: #f5f5f7; padding: 15px; border-radius: 16px; display: flex; align-items: center; opacity: 1; }
         .live-view-btn { background: var(--primary-color); color: white; padding: 10px 20px; border-radius: 20px; display: inline-block; font-size: 14px; font-weight: 600; cursor: pointer; text-decoration: none; box-shadow: 0 4px 6px rgba(0,0,0,0.1); }
         .live-view-btn:hover { filter: brightness(1.1); transform: scale(1.05) translateY(-2px); box-shadow: 0 8px 15px rgba(0,0,0,0.2); }
@@ -193,6 +205,15 @@
         .inquiry-form textarea { resize: vertical; }
         body.dark-mode .inquiry-form input, body.dark-mode .inquiry-form textarea { border-color: var(--card-border); }
 
+        /* [수정됨] 문의 제목 (FAQ 스타일과 동일하게) */
+        .inquiry-title { 
+            font-size: 24px; 
+            font-weight: 700; 
+            margin: 0 0 30px; 
+            text-align: center; 
+            color: var(--text-main); 
+        }
+
         /* --- [FAQ SECTION] --- */
         .faq-container { margin: 0 auto 0; padding: 0 20px; border-radius: 30px; }
         .faq-item { border-bottom: 1px solid var(--card-border); }
@@ -241,7 +262,7 @@
         @keyframes modalHide { from { opacity: 1; transform: translateY(0) scale(1); } to { opacity: 0; transform: translateY(14px) scale(0.99); } }
         @keyframes simpleFadeOut { from { opacity: 1; } to { opacity: 0; } }
 
-        /* [추가] 커스텀 확인창/로딩 스타일 */
+        /* 커스텀 확인창/로딩 스타일 */
         .loading-spinner { width: 40px; height: 40px; border: 4px solid rgba(255,255,255,0.3); border-radius: 50%; border-top-color: var(--primary-color); animation: spin 1s ease-in-out infinite; margin: 0 auto; }
         @keyframes spin { to { transform: rotate(360deg); } }
 
@@ -369,7 +390,7 @@
                     <div class="phone-mockup">
                         <div class="notch"></div>
                         <div class="phone-screen">
-                            <div style="width:100%; padding:20px 20px 10px; box-sizing:border-box; font-weight:bold; font-size:18px; color:#333;">최근 감지 기록</div>
+                            <div style="width:100%; padding:40px 20px 10px; box-sizing:border-box; font-weight:bold; font-size:18px; color:#333;">최근 감지 기록</div>
                             <div id="notification-list">
                                 <div class="notification-item">
                                     <div style="width:40px; height:40px; background:#ddd; border-radius:8px; margin-right:10px; display:flex; align-items:center; justify-content:center;">📸</div>
@@ -393,7 +414,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div style="margin-bottom:20px; text-align:center;"><a href="https://project.whanci.xyz" target="_blank" class="live-view-btn">체험 해보기</a></div>
+                            <div style="margin-bottom:30px; text-align:center;"><a href="https://project.whanci.xyz" target="_blank" class="live-view-btn">체험 해보기</a></div>
                         </div>
                     </div>
                 </div>
@@ -565,6 +586,7 @@
             </div>
 
             <div class="inquiry-box">
+                <h3 class="inquiry-title">Send Message</h3>
                 <form class="inquiry-form" onsubmit="submitInquiry(event)">
                     <input type="text" placeholder="이름" required>
                     <input type="email" placeholder="이메일" required>
@@ -744,7 +766,7 @@
 
         // [수정] 주문/결제 취소 로직
         function cancelOrder(fromPayment=false) {
-            const msg = fromPayment ? "결제를 취소하고 상품 페이지로 돌아갈까요?" : "주문을 취소하고 상품 페이지로 돌아갈까요?";
+            const msg = fromPayment ? "결제를 취소하고 돌아갈까요?" : "주문서를 초기화하고 돌아갈까요?";
             showSystemConfirm(msg, () => {
                 orderInfo = {};
                 const nameEl = document.getElementById('buyer_name');
@@ -760,9 +782,9 @@
         // [추가] 문의 제출 로직 (입력창 초기화)
         function submitInquiry(e) {
             e.preventDefault();
-            // 커스텀 모달 대신 간단한 알림 사용 (요청 없음, 필요시 커스텀 가능) -> 여기서는 그냥 alert 유지하되 폼 리셋
-            alert('문의가 접수되었습니다.');
-            e.target.reset();
+            showSystemConfirm("문의를 전송하시겠습니까?", () => {
+                e.target.reset(); // 폼 초기화
+            });
         }
 
         const textElement = document.getElementById('typewriter');
