--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@
 
             <div style="text-align: center; margin-top: 60px;">
                 <h3 style="font-size: 24px; font-weight: 700; margin-bottom: 20px;">Have questions?</h3>
-                <button class="cta-button" onclick="openInquiryModal()">Send Message</button>
+                <button class="cta-button" onclick="openInquiryModal()">문의 하기</button>
             </div>
         </div>
     </main>
