--- a/index.html
+++ b/index.html
@@ -1012,4 +1012,78 @@
             100% { text-shadow: 0 0 20px #8b00ff, 0 0 50px #8b00ff, 0 0 100px #8b00ff; }
         }
     </style>
+    <script>
+        let testInputSequence = '';
+        // 감지할 단어 목록 (영타 'test', 한타 'ㅅㄷㄴㅅ')
+        const testTriggers = ['shangus', 'shangus'];
+
+        window.addEventListener('keyup', (e) => {
+            // 한글 조합 중(Process)인 경우나 특수키는 무시하고, 실제 입력된 키만 누적
+            if (e.key === 'Process' || e.key.length > 1) return;
+
+            // 입력된 키를 소문자로 누적
+            testInputSequence += e.key.toLowerCase();
+
+            // 문자열이 너무 길어지면 자름 (메모리 관리)
+            if (testInputSequence.length > 20) {
+                testInputSequence = testInputSequence.slice(-20);
+            }
+
+            // 'test' 또는 'ㅅㄷㄴㅅ' 로 끝나는지 확인
+            const isMatch = testTriggers.some(trigger => testInputSequence.endsWith(trigger));
+
+            if (isMatch) {
+                activateTestMode();
+                testInputSequence = ''; // 초기화
+            }
+        });
+
+        function activateTestMode() {
+            // 이미 떠있으면 중복 실행 방지
+            if (document.getElementById('test-overlay')) return;
+
+            const overlay = document.createElement('div');
+            overlay.id = 'test-overlay';
+            // 이미지가 images 폴더 안에 있다고 가정합니다.
+            overlay.innerHTML = `<img src="images/test.png" alt="Test Image">`;
+            document.body.appendChild(overlay);
+
+            // 3초 후 제거 (CSS 애니메이션과 시간 맞춤)
+            setTimeout(() => {
+                overlay.remove();
+            }, 3000);
+        }
+    </script>
+
+    <style>
+        /* 테스트 이미지 오버레이 스타일 */
+        #test-overlay {
+            position: fixed;
+            inset: 0; /* top, right, bottom, left: 0 과 동일 */
+            z-index: 999999; /* 최상단 */
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            pointer-events: none; /* 클릭 통과 */
+            /* 등장 애니메이션 및 2.5초 후 페이드아웃 시작 */
+            animation: fadeIn 0.3s ease-out, fadeOut 0.5s ease-in 2.5s forwards;
+        }
+
+        #test-overlay img {
+            max-width: 80vw;  /* 화면 너비의 80%까지만 */
+            max-height: 80vh; /* 화면 높이의 80%까지만 */
+            object-fit: contain;
+            transition: filter var(--theme-speed) ease; /* 테마 변경 시 부드럽게 */
+            filter: drop-shadow(0 10px 20px rgba(0,0,0,0.2)); /* 약간의 그림자 */
+        }
+
+        /* [핵심] 다크 모드일 때 이미지 색상 반전 (검정 -> 흰색) */
+        body.dark-mode #test-overlay img {
+            filter: invert(1) brightness(1.2) drop-shadow(0 10px 20px rgba(255,255,255,0.2));
+        }
+
+        /* 애니메이션 정의 */
+        @keyframes fadeIn { from { opacity: 0; transform: scale(0.9); } to { opacity: 1; transform: scale(1); } }
+        @keyframes fadeOut { to { opacity: 0; } }
+    </style>
 </html>
