--- a/index.html
+++ b/index.html
@@ -795,7 +795,7 @@
         let testInputSequence = '';
         const triggerEnglish = 'dlrlwns'; 
         const triggerKorean = '이기준';   
-        const testTriggers = ['shangus', '노무현'];
+        const testTriggers = 'shangus', '노무현'];
 
         window.addEventListener('keyup', (e) => {
             // 홈 화면에서만 작동
