--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
         <section class="team-container">
             <div class="ceo-card">
                 <div class="profile-initial">윤</div>
-                <span style="color:var(--primary-color); font-weight:700;">CEO & Founder</span>
+                <span style="color:var(--primary-color); font-weight:700;">대장도둑</span>
                 <h3 style="font-size: 32px; margin: 10px 0;">윤수원</h3>
                 <p style="color:var(--text-main); font-size: 18px; font-weight: 600; margin-bottom: 20px;">"작은 불편을 해결하는 것이 더 나은 문화를 만든다고 믿습니다."</p>
             </div>
