--- a/index.html
+++ b/index.html
@@ -266,24 +266,25 @@
         .modal-actions .cta-button { width: 100%; min-width: 0; }
 
         /* [추가] 김*우 이스터에그 알림창 스타일 */
-        #easter-egg-toast {
-            position: fixed;
-            bottom: 30px;
-            left: 50%;
-            transform: translateX(-50%) translateY(100px);
-            background: var(--primary-color);
-            color: white;
-            padding: 12px 28px;
-            border-radius: 50px;
-            font-weight: 700;
-            font-size: 16px;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.2);
-            z-index: 100000;
-            transition: all 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-            opacity: 0;
-            pointer-events: none;
-            backdrop-filter: blur(5px);
-        }
+        /* [수정] 김*우 이스터에그 알림창 스타일 */
+#easter-egg-toast {
+    position: fixed;
+    bottom: 30px;
+    left: 50%;
+    transform: translateX(-50%) translateY(100px);
+    background: var(--primary-color);
+    color: white;
+    padding: 12px 28px;
+    border-radius: 50px;
+    font-weight: 700;
+    font-size: 16px;
+    box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+    z-index: 100000;
+    transition: all 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    opacity: 0;
+    cursor: pointer; /* 클릭 가능함을 표시 */
+    backdrop-filter: blur(5px);
+}
         #easter-egg-toast.show {
             transform: translateX(-50%) translateY(0);
             opacity: 1;
@@ -699,21 +700,32 @@
 
         // [추가] 김*우 이스터에그 함수
         function showKimEasterEgg() {
-            // 이미 있으면 중복 방지
-            if (document.getElementById('easter-egg-toast')) return;
+    // 이미 있으면 중복 방지
+    if (document.getElementById('easter-egg-toast')) return;
 
-            const toast = document.createElement('div');
-            toast.id = 'easter-egg-toast';
-            toast.innerText = 'XO, My Cyberlove';
-            document.body.appendChild(toast);
+    const toast = document.createElement('div');
+    toast.id = 'easter-egg-toast';
+    toast.innerText = 'XO, My Cyberlove';
+    document.body.appendChild(toast);
 
-            setTimeout(() => toast.classList.add('show'), 100);
+    // [추가] 클릭 시 인스타그램 이동
+    toast.onclick = function() {
+        window.open('https://www.instagram.com/chuu_atrp', '_blank');
+    };
 
+    // 나타나기
+    setTimeout(() => toast.classList.add('show'), 100);
+
+    // 3초 후 사라짐 (클릭할 시간을 주기 위해 유지)
+    setTimeout(() => {
+        if (toast) {
+            toast.classList.remove('show');
             setTimeout(() => {
-                toast.classList.remove('show');
-                setTimeout(() => toast.remove(), 500);
-            }, 3000);
+                if (toast.parentNode) toast.remove();
+            }, 500);
         }
+    }, 4000); // 클릭할 여유를 주고자 시간을 4초로 약간 늘렸습니다.
+}
 
         // 이기준 이스터에그 로직
         let leeInputSequence = '';
