--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
                 <div class="app-text">
                     <span style="color: var(--primary-color); font-weight: 700; font-size: 14px; letter-spacing: 1px;">Access Anywhere</span>
                     <h2 style="font-size: 42px; font-weight: 700; margin: 15px 0 20px; line-height: 1.1;">범인은 이 안에.<br>어디서나 확인하세요.</h2>
-                    <p style="font-size: 18px; color: #86868b; line-height: 1.6;">누가 내 음료수를 가져갔을까요?<br>Lock-Fridge 전용 앱이 동작 감지 순간을 포착하여<br>스마트폰으로 즉시 알림을 보내드립니다.</p>
+                    <p style="font-size: 18px; color: #86868b; line-height: 1.6;">누가 내 음료수를 가져갔을까요?<br>LockFridge 전용 앱이 동작 감지 순간을 포착하여<br>스마트폰으로 즉시 알림을 보내드립니다.</p>
                     <a onclick="showPage('product')" style="display:inline-block; margin-top:30px; color:var(--primary-color); font-weight:600; cursor:pointer; text-decoration:underline;">제품 자세히 보기 ></a>
                 </div>
                 <div class="app-image">
@@ -466,14 +466,14 @@
         <section class="product-grid">
             <div class="product-card" onclick="openProductModal('src04')">
                 <h4 style="color:var(--primary-color); margin-bottom: 5px;">Dormitory Edition</h4>
-                <h3 style="font-size: 28px; margin-top: 0;">Lock-Fridge</h3>
+                <h3 style="font-size: 28px; margin-top: 0;">LockFridge</h3>
                 <p>냉장고에 설치하는 초소형 카메라 모듈.</br>촬영된 사진은 즉시 클라우드에 저장되며, 언제 어디서나 확인 가능합니다.</p>
                 <div class="product-img-box">[ 제품 이미지 ]</div>
                 <button onclick="event.stopPropagation(); showPage('buy')" class="cta-button">제품 구매하기</button>
             </div>
             <div class="product-card disabled-card" style="border-style: dashed;" onclick="openProductModal('office')">
                 <h4 style="color:var(--text-sub); margin-bottom: 5px;">Office Edition</h4>
-                <h3 style="font-size: 28px; margin-top: 0; color: #86868b;">Lock-Fridge For Office</h3>
+                <h3 style="font-size: 28px; margin-top: 0; color: #86868b;">LockFridge For Office</h3>
                 <p>사원증 및 얼굴 인식 기능이 추가된 제품.</br>더 많은 기능의 관리자 페이지와 우수한 보안의 로그 서버를 제공합니다.</p>
                 <div class="product-img-box" style="opacity: 1;">[ 개발 중 ]</div>
                 <button class="cta-button" style="background-color: #ccc; cursor: default;" onclick="event.stopPropagation(); shakeButton(this)">준비 중</button>
@@ -486,7 +486,7 @@
             <div style="flex: 1; min-width: 320px;">
                 <h2>주문서 작성</h2>
                 <div style="background: var(--card-bg); padding: 25px; border-radius: 12px; border: 1px solid var(--card-border); margin-top: 20px;">
-                    <p style="font-weight:700;">Lock-Fridge</p>
+                    <p style="font-weight:700;">LockFridge</p>
                     <p style="font-size: 16px; color: var(--text-sub); margin: 0 0 5px 0; text-decoration: line-through;">149,900원</p>
                     <p style="font-size: 28px; font-weight: 800; color: var(--primary-color); margin: 0;">89,000원</p>
                 </div>
@@ -533,7 +533,7 @@
         <div class="receipt-card">
             <h2 style="text-align: center; color: var(--primary-color); margin-bottom: 30px;">주문이 완료되었습니다!</h2>
             <div class="receipt-line"><span>주문 번호</span><b id="rec_no"></b></div>
-            <div class="receipt-line"><span>상품명</span><b>Lock-Fridge</b></div>
+            <div class="receipt-line"><span>상품명</span><b>LockFridge</b></div>
             <div class="receipt-line"><span>수령인</span><span id="rec_name"></span></div>
             <div class="receipt-line"><span>배송지</span><span id="rec_addr"></span></div>
             <div class="receipt-line"><span>결제 수단</span><span id="rec_method"></span></div>
@@ -922,8 +922,8 @@
 
         // 제품 상세 모달
         const productData = {
-            src04: { title: "Lock-Fridge", badge: "Dormitory Edition", desc: "냉장고에 설치하는 초소형 카메라 모듈.\n촬영된 사진은 즉시 클라우드에 저장되며 확인 가능합니다.", imageText: "[ 제품 이미지 ]", canBuy: true },
-            office: { title: "Lock-Fridge For Office", badge: "Office Edition", desc: "사원증 및 얼굴 인식 기능 추가.\n현재 준비 중입니다.", imageText: "[ 개발 중 ]", canBuy: false }
+            src04: { title: "LockFridge", badge: "Dormitory Edition", desc: "냉장고에 설치하는 초소형 카메라 모듈.\n촬영된 사진은 즉시 클라우드에 저장되며 확인 가능합니다.", imageText: "[ 제품 이미지 ]", canBuy: true },
+            office: { title: "LockFridge For Office", badge: "Office Edition", desc: "사원증 및 얼굴 인식 기능 추가.\n현재 준비 중입니다.", imageText: "[ 개발 중 ]", canBuy: false }
         };
 
         function openProductModal(key) {
