--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
                         <div class="reviewer-avatar">김</div>
                         <div>
                             <div style="font-size: 14px; font-weight: 700; color: var(--text-main);">김*우</div>
-                            <div style="font-size: 12px; color: var(--text-sub);">가수</div>
+                            <div style="font-size: 12px; color: var(--text-sub);">아이돌</div>
                         </div>
                     </div>
                 </div>
