--- a/index.html
+++ b/index.html
@@ -162,7 +162,24 @@
         .product-card:not(.disabled-card):hover { transform: translateY(-5px); box-shadow: 0 20px 40px rgba(0,0,0,0.05); }
         .disabled-card { opacity: 0.7; cursor: default; }
         .disabled-card:hover { transform: none; box-shadow: none; }
-        .product-img-box { width: 100%; height: 320px; background: var(--bg-light); border-radius: 20px; margin: 30px 0; display: flex; align-items: center; justify-content: center; color: #ccc; font-weight: bold; }
+        .product-img-box {
+        width: 100%;
+        height: 320px;
+        background: var(--bg-light);
+        border-radius: 20px;
+        margin: 30px 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        overflow: hidden; /* 이미지가 넘치지 않게 */
+        }
+
+        .product-img-box img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain; /* 비율 유지하며 박스 안에 맞춤 */
+        padding: 20px; /* 여백이 필요 없으면 삭제하세요 */
+        }
 
         @keyframes shake { 0%, 100% { transform: translateX(0); } 20% { transform: translateX(-1px); } 40% { transform: translateX(1px); } 60% { transform: translateX(-1px); } 80% { transform: translateX(1px); } }
         .shake-animation { animation: shake 0.3s ease-in-out; }
@@ -259,7 +276,11 @@
         .modal-close { width: 46px; height: 46px; border-radius: 50%; border: 1px solid var(--card-border); background: var(--bg-light); color: var(--text-main); cursor: pointer; font-size: 20px; font-weight: 900; flex-shrink: 0; }
         .modal-close:hover { transform: scale(1.05); }
         .modal-body { display: grid; grid-template-columns: 1.35fr 1fr; gap: 26px; padding: 26px; }
-        .modal-image { width: 100%; min-height: 460px; background: var(--bg-light); border-radius: 22px; display: flex; align-items: center; justify-content: center; color: #bbb; font-weight: 800; }
+        .modal-image img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+        }
         .modal-right { display: flex; flex-direction: column; min-height: 460px; }
         .modal-desc { color: var(--text-sub); font-size: 16px; line-height: 1.8; margin: 0 0 18px; white-space: pre-line; }
         .modal-actions { display: flex; gap: 14px; margin-top: auto; justify-content: flex-end; padding-top: 16px; width: 100%; }
