--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
                 <h3 style="font-size: 28px; margin-top: 0; color: #86868b;">LockFridge For Office</h3>
                 <p>사원증 및 얼굴 인식 기능이 추가된 제품.</br>더 많은 기능의 관리자 페이지와 우수한 보안의 로그 서버를 제공합니다.</p>
                 <div class="product-img-box">
-                    <img src="images/product-office.jpg" alt="LockFridge For Office" style="filter: grayscale(1); opacity: 0.6;">
+                    <img src="images/product-office.jpeg" alt="LockFridge For Office" style="filter: grayscale(1); opacity: 0.6;">
                 </div>
                 <button class="cta-button" style="background-color: #ccc; cursor: default;" onclick="event.stopPropagation(); shakeButton(this)">준비 중</button>
             </div>
@@ -946,7 +946,7 @@
                 title: "LockFridge For Office", 
                 badge: "Office Edition", 
                 desc: "사원증 및 얼굴 인식 기능 추가.\n현재 준비 중입니다.", 
-                image: "images/product-office.jpg",
+                image: "images/product-office.jpeg",
                 canBuy: false 
             }
         };
